--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Reading Notes
 description: A Jekyll theme for documentation
-baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
+baseurl: "/reading-notes" # the subpath of your site, e.g. /blog
 url: "https://rdball.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
